# duffer

./: .gitignore  .hlint.yaml  .travis.yml  Index.ipynb  LICENSE  Pipes.ipynb  README.md  default.nix  demo.ipynb  duffer.cabal  index.html  release.nix  stack.yaml
.ci/: unpack.sh  update_pages.sh
app/: Main.hs
duffer/: default.nix  duffer.cabal
duffer-json/: default.nix  duffer-json.cabal
duffer-json/src/Duffer/: JSON.hs
duffer-json/test/: Spec.hs
duffer-streaming/: default.nix  duffer-streaming.cabal
duffer-streaming/src/: Duffer.hs
duffer-streaming/src/Duffer/: Misc.hs  Plumbing.hs  WithRepo.hs  WorkObject.hs
duffer-streaming/src/Duffer/Loose/: Parser.hs
duffer-streaming/src/Duffer/Pack/: Entries.hs  File.hs  Streaming.hs
duffer-streaming/test/: Spec.hs
duffer/src/Duffer/: Loose.hs  Misc.hs  Pack.hs  Plumbing.hs  Unified.hs  WorkObject.hs
duffer/src/Duffer/Loose/: Objects.hs  Parser.hs
duffer/src/Duffer/Pack/: Bits.hs  Entries.hs  File.hs  Parser.hs  Streaming.hs
duffer/test/: Spec.hs
ihaskell-duffer/: default.nix  ihaskell-duffer.cabal
ihaskell-duffer/src/IHaskell/Display/: Duffer.hs
notebooks/: Index.ipynb  demo.ipynb
presentation/: presentation.md
src/: Duffer.hs  Lib.hs
src/Duffer/: Loose.hs  Misc.hs  Objects.hs  Pack.hs  PackIndex.hs  Parser.hs  Plumbing.hs  Porcelain.hs  Types.hs  Unified.hs  WithRepo.hs  WorkObject.hs  WorkTree.hs
src/Duffer/Loose/: JSON.hs  Objects.hs  Parser.hs
src/Duffer/Pack/: Entries.hs  File.hs  Index.hs  Parser.hs  Streaming.hs
src/Duffer/Packed/: PackFile.hs  PackIndex.hs  Parser.hs
test/: Spec.hs
