name:                duffer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/vaibhavsagar/duffer#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Sagar
maintainer:          vaibhavsagar@gmail.com
copyright:           2016 Vaibhav Sagar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Duffer
  other-modules:       Duffer.Loose
                       Duffer.Types
                       Duffer.Parser
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , filepath
                     , utf8-string
                     , zlib
                     , SHA
                     , base16-bytestring
                     , attoparsec
                     , directory
                     , transformers
  ghc-options:       -fwarn-unused-imports
                     -fwarn-tabs
                     -fwarn-missing-signatures
                     -fwarn-incomplete-patterns
  default-language:    Haskell2010

test-suite duffer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , duffer
                     , hspec
                     , process
                     , bytestring
                     , transformers
                     , utf8-string
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable duffer-profile
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , duffer
                     , hspec
                     , process
                     , bytestring
                     , transformers
                     , utf8-string
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vaibhavsagar/duffer
