name:                duffer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/vaibhavsagar/duffer#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Sagar
maintainer:          vaibhavsagar@gmail.com
copyright:           2016 Vaibhav Sagar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Duffer
                       Duffer.Loose
                       Duffer.Loose.Objects
                       Duffer.Loose.Parser
                       Duffer.Pack
                       Duffer.Pack.File
                       Duffer.Pack.Parser
                       Duffer.Pack.Entries
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cryptohash
                     , filepath
                     , mmap
                     , utf8-string
                     , zlib
                     , base16-bytestring
                     , attoparsec
                     , directory
                     , transformers
  default-extensions:  OverloadedStrings
  ghc-options:       -fwarn-unused-imports
                     -fwarn-tabs
                     -fwarn-missing-signatures
                     -fwarn-incomplete-patterns
  default-language:    Haskell2010

test-suite duffer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , duffer
                     , attoparsec
                     , directory
                     , filepath
                     , hspec
                     , process
                     , bytestring
                     , transformers
                     , utf8-string
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vaibhavsagar/duffer
