name:                ihaskell-duffer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/vaibhavsagar/duffer#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Sagar
maintainer:          vaibhavsagar@gmail.com
copyright:           2016 Vaibhav Sagar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IHaskell.Display.Duffer
  build-depends:       base >= 4.7 && < 5
                     , byteable
                     , containers
                     , duffer
                     , bytestring-tree-builder
                     , ihaskell
                     , utf8-string
  default-extensions:  OverloadedStrings
  ghc-options:       -fwarn-unused-imports
                     -fwarn-tabs
                     -fwarn-missing-signatures
                     -fwarn-incomplete-patterns
                     -Wall
                     -Wno-orphans
                     -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vaibhavsagar/duffer
